Bug #2638 - WP Nav adjustment - truncate long site names
Slight adjustment to max width on group site names to deal with some navbar wrapping

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -1295,6 +1295,13 @@ a.cc-widget-icon-link {
 }
 /**theme specific adminbar styles (group sites only)**/
 .oplb-bs.adminbar-manual-bootstrap {
+	#wpadminbar {
+		#wp-toolbar {
+			#wp-admin-bar-site-name{
+				max-width: 280px;
+			}
+		}
+	}
 	&.twentyeleven {
 		#wpadminbar {
 			#wp-toolbar {
